RESOLVED FIXED200153
[Win][WK1] Can't change Web Inspector frontend height in high DPI
https://bugs.webkit.org/show_bug.cgi?id=200153
Summary [Win][WK1] Can't change Web Inspector frontend height in high DPI
Fujii Hironori
Reported 2019-07-25 22:41:18 PDT
[Win][WK1] Can't change Web Inspector frontend height in high DPI In InspectorFrontendClientLocal::changeAttachedWindowHeight constrainedAttachedWindowHeight always returns minimumAttachedHeight.
Attachments
Patch (1.66 KB, patch)
2019-07-25 23:19 PDT, Fujii Hironori
no flags
Fujii Hironori
Comment 1 2019-07-25 23:19:42 PDT
Fujii Hironori
Comment 2 2019-07-28 19:08:58 PDT
Comment on attachment 374941 [details] Patch Clearing flags on attachment: 374941 Committed r247897: <https://trac.webkit.org/changeset/247897>
Fujii Hironori
Comment 3 2019-07-28 19:09:01 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2019-07-28 19:09:15 PDT
Note You need to log in before you can comment on or make changes to this bug.