[Win][WK1] Can't change Web Inspector frontend height in high DPI https://bugs.webkit.org/show_bug.cgi?id=200153

Reviewed by Don Olmstead.

* WebCoreSupport/WebInspectorClient.cpp:
(WebInspectorFrontendClient::setAttachedWindowHeight):
Applied deviceScaleFactor to the argument height.

Canonical link: https://commits.webkit.org/214013@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@247897 268f45cc-cd09-0410-ab3c-d52691b4dbfc